#IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
#    MESSAGE(FATAL_ERROR "Prevented in-tree built. This is bad practice.")
#ENDIF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})

INCLUDE(CMakeDependentOption)
INCLUDE(FeatureSummary)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(RTIMULib CXX)
ENABLE_TESTING()

OPTION(BUILD_MAIN "Build Main" ON)

ADD_FEATURE_INFO(Main BUILD_MAIN "")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SORCE_DIR}/../RTIMULib)

SET(MAIN_SRC main.cpp)

ADD_EXECUTABLE(main ${MAIN_SRC})
#TARGET_LINK_LIBRARIES(main RTIMULib)

INSTALL(TARGETS main DESTINATION bin)

PRINT_ENABLED_FEATURES()
MESSAGE(STATUS "Using install prefix: ${CMAKE_INSTALL_PREFIX}")

