IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    MESSAGE(FATAL_ERROR "Prevented in-tree built. This is bad practice.")
ENDIF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})

INCLUDE(CMakeDependentOption)
INCLUDE(FeatureSummary)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(IMUNODE CXX)
ENABLE_TESTING()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/RTIMULib2)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/RTIMULib2/RTIMULib)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/RTIMUBerryGPS-IMUV4)


ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RTIMULib2/RTIMULib RTIMULib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RTIMUBerryGPS-IMUV4 BERRYIMULib)

SET(MAIN_SRCS main.cpp)
ADD_EXECUTABLE(main ${MAIN_SRCS})
TARGET_LINK_LIBRARIES(main RTIMULib)
TARGET_LINK_LIBRARIES(main BERRYIMULib)

INSTALL(TARGETS main DESTINATION bin)
